Started creating ChatScreen

--- a/app/src/main/res/layout/chat_screen.xml
+++ b/app/src/main/res/layout/chat_screen.xml
@@ -16,12 +16,31 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <android.support.v7.widget.AppCompatTextView
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/chatScreenMessageRecycler"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" />
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_gravity="center"
-                android:text="CHAT SCREEN\nNOT READY"/>
+                android:orientation="horizontal"
+                android:weightSum="10">
+
+                <android.support.v7.widget.AppCompatImageButton
+                    android:id="@+id/chatScreenEmojiSelectButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/emoji_1f642"
+                    android:layout_weight="8"/>
+
+                <android.support.v7.widget.AppCompatEditText
+                    android:id="@+id/chatScreenMessageEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
