--- a/app/src/main/res/layout/main_recycler_chat_item.xml
+++ b/app/src/main/res/layout/main_recycler_chat_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="72dp"
+    android:orientation="vertical"
     android:id="@+id/mainRecyclerChatItem">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -45,4 +46,5 @@
         android:layout_alignTop="@+id/chatNameTextView"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
