--- a/app/src/main/res/layout/chat_screen.xml
+++ b/app/src/main/res/layout/chat_screen.xml
@@ -11,38 +11,47 @@
         android:id="@+id/chatScreenViewFlipper">
 
         <!--Shows the chat-->
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/chatScreenMessageRecycler"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:layout_above="@+id/chatScreenTextInputLayout"/>
 
             <LinearLayout
+                android:layout_alignParentBottom="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:weightSum="10">
+                android:weightSum="100"
+                android:id="@+id/chatScreenTextInputLayout">
 
                 <android.support.v7.widget.AppCompatImageButton
                     android:id="@+id/chatScreenEmojiSelectButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@drawable/emoji_1f642"
-                    android:layout_weight="8"/>
+                    android:layout_weight="40"/>
 
                 <android.support.v7.widget.AppCompatEditText
                     android:id="@+id/chatScreenMessageEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="2" />
+                    android:layout_weight="25" />
+
+                <android.support.v7.widget.AppCompatButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="35"
+                    android:id="@+id/chatScreenSendMessageButton"
+                    android:text="Send"/>
 
             </LinearLayout>
 
-        </LinearLayout>
+        </RelativeLayout>
 
 
         <!--Showed if status is "pending"-->
