--- a/app/src/main/res/layout/fragment_new_chat_auth.xml
+++ b/app/src/main/res/layout/fragment_new_chat_auth.xml
@@ -18,7 +18,7 @@
     <android.support.v7.widget.AppCompatTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Enter a secret password only you and your friend know in to the text box below. It is used to secure the connection. You an press and hold on this text to show/hide the password."
+        android:text="Enter a secret password only you and your friend know in to the text box below. It is used to secure the connection. You can press and hold on this text to show/hide the password."
         android:id="@+id/newChatAuthPasswordInfoTextView"/>
 
     <android.support.design.widget.TextInputLayout
